--- a/Microservices.TaxaDeJuros.WebApi/Microservices.TaxasDeJuros.WebApi.csproj
+++ b/Microservices.TaxaDeJuros.WebApi/Microservices.TaxasDeJuros.WebApi.csproj
@@ -7,11 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="4.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.10" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
   <ItemGroup>
