CM - Efetuando correção do nome das pastas do projeto e implementando testes unitários

--- a/Microservices.TaxasDeJuros.Repositories/Microservices.TaxasDeJuros.Repositories.csproj
+++ b/Microservices.TaxasDeJuros.Repositories/Microservices.TaxasDeJuros.Repositories.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Microservices.TaxaDeJuros.Entities\Microservices.TaxasDeJuros.Entities.csproj" />
+    <ProjectReference Include="..\Microservices.TaxasDeJuros.Entities\Microservices.TaxasDeJuros.Entities.csproj" />
   </ItemGroup>
 
 </Project>
