--- a/Microservices.TaxasDeJuros.Services/Microservices.TaxasDeJuros.Services.csproj
+++ b/Microservices.TaxasDeJuros.Services/Microservices.TaxasDeJuros.Services.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Microservices.TaxasDeJuros.Repositories\Microservices.TaxasDeJuros.Repositories.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="Microsoft.Extensions.DependencyInjection.Abstractions">
       <HintPath>C:\Program Files\dotnet\packs\Microsoft.AspNetCore.App.Ref\3.1.0\ref\netcoreapp3.1\Microsoft.Extensions.DependencyInjection.Abstractions.dll</HintPath>
     </Reference>
