--- a/Microservices.TaxasDeJuros.Entities.Tests/Microservices.TaxasDeJuros.Entities.UnitTests.csproj
+++ b/Microservices.TaxasDeJuros.Entities.Tests/Microservices.TaxasDeJuros.Entities.UnitTests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Microservices.TaxaDeJuros\Microservices.TaxasDeJuros.Entities\Microservices.TaxasDeJuros.Entities.csproj" />
+    <ProjectReference Include="..\Microservices.TaxasDeJuros.Entities\Microservices.TaxasDeJuros.Entities.csproj" />
   </ItemGroup>
 
 </Project>
