--- a/Microservices.TaxasDeJuros.WebApi/Dockerfile
+++ b/Microservices.TaxasDeJuros.WebApi/Dockerfile
@@ -6,16 +6,16 @@ EXPOSE 80
 
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /src
-COPY ["Microservices.TaxaDeJuros.WebApi/Microservices.TaxaDeJuros.WebApi.csproj", "Microservices.TaxaDeJuros.WebApi/"]
-RUN dotnet restore "Microservices.TaxaDeJuros.WebApi/Microservices.TaxaDeJuros.WebApi.csproj"
+COPY ["Microservices.TaxasDeJuros.WebApi/Microservices.TaxasDeJuros.WebApi.csproj", "Microservices.TaxasDeJuros.WebApi/"]
+RUN dotnet restore "Microservices.TaxasDeJuros.WebApi/Microservices.TaxasDeJuros.WebApi.csproj"
 COPY . .
-WORKDIR "/src/Microservices.TaxaDeJuros.WebApi"
-RUN dotnet build "Microservices.TaxaDeJuros.WebApi.csproj" -c Release -o /app/build
+WORKDIR "/src/Microservices.TaxasDeJuros.WebApi"
+RUN dotnet build "Microservices.TaxasDeJuros.WebApi.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Microservices.TaxaDeJuros.WebApi.csproj" -c Release -o /app/publish
+RUN dotnet publish "Microservices.TaxasDeJuros.WebApi.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Microservices.TaxaDeJuros.WebApi.dll"]
+ENTRYPOINT ["dotnet", "Microservices.TaxasDeJuros.WebApi.dll"]
