--- a/src/Microservices.TaxasDeJuros.Repositories/Microservices.TaxasDeJuros.Repositories.csproj
+++ b/src/Microservices.TaxasDeJuros.Repositories/Microservices.TaxasDeJuros.Repositories.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Microservices.TaxasDeJuros.Domain\Microservices.TaxasDeJuros.Domain.csproj" />
+    <ProjectReference Include="..\Microservices.TaxasDeJuros.Repositories.Abstractions\Microservices.TaxasDeJuros.Repositories.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
