--- a/test/Microservices.TaxasDeJuros.Domain.Tests/Microservices.TaxasDeJuros.Domain.Tests.csproj
+++ b/test/Microservices.TaxasDeJuros.Domain.Tests/Microservices.TaxasDeJuros.Domain.Tests.csproj
@@ -1,9 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-
-    <IsPackable>false</IsPackable>
+    <TargetFramework>net5.0</TargetFramework>
+    <RootNamespace>Microservices.TaxasDeJuros.Domain.UnitTests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
