--- a/test/Microservices.TaxasDeJuros.Services.Tests/Microservices.TaxasDeJuros.Services.Tests.csproj
+++ b/test/Microservices.TaxasDeJuros.Services.Tests/Microservices.TaxasDeJuros.Services.Tests.csproj
@@ -4,4 +4,22 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
+        <PackageReference Include="xunit" Version="2.4.0" />
+        <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
+        <PackageReference Include="coverlet.collector" Version="1.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Bogus" Version="32.0.2" />
+        <PackageReference Include="FluentAssertions" Version="5.10.3" />
+        <PackageReference Include="Moq" Version="4.15.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\src\Microservices.TaxasDeJuros.Services.Abstractions\Microservices.TaxasDeJuros.Services.Abstractions.csproj" />
+      <ProjectReference Include="..\..\src\Microservices.TaxasDeJuros.Services\Microservices.TaxasDeJuros.Services.csproj" />
+    </ItemGroup>
+
 </Project>
