--- a/test/Microservices.TaxasDeJuros.WebApi.IntegrationTests/Microservices.TaxasDeJuros.WebApi.IntegrationTests.csproj
+++ b/test/Microservices.TaxasDeJuros.WebApi.IntegrationTests/Microservices.TaxasDeJuros.WebApi.IntegrationTests.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="5.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
     <PackageReference Include="xunit" Version="2.4.1" />
