Melhorando testes de unidade

--- a/test/Microservices.TaxasDeJuros.Domain.Tests/Microservices.TaxasDeJuros.Domain.Tests.csproj
+++ b/test/Microservices.TaxasDeJuros.Domain.Tests/Microservices.TaxasDeJuros.Domain.Tests.csproj
@@ -2,28 +2,19 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>Microservices.TaxasDeJuros.Domain.UnitTests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="Bogus" Version="32.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
     <PackageReference Include="xunit" Version="2.4.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" />
     <PackageReference Include="coverlet.collector" Version="1.3.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Microservices.TaxasDeJuros.Domain\Microservices.TaxasDeJuros.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="Bogus, Version=32.0.2.0, Culture=neutral, PublicKeyToken=fa1bb3f3f218129a">
-      <HintPath>..\..\..\..\..\Users\matheus.brenner\.nuget\packages\bogus\32.0.2\lib\netstandard2.0\Bogus.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
 </Project>
